log

Sat Mar 12 04:06:23 UTC 2022: 
test.c: In function ‘suma’:
test.c:250:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: ‘sumaN’ defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
2a82c6e
Sat Mar 12 04:08:40 UTC 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     c= a+b;
      ^
exercises.c:16:10: error: ‘return’ with a value, in function returning void [-Werror]
   return c;
          ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
97d44c1
Sat Mar 12 04:08:54 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:10: error: ‘return’ with a value, in function returning void [-Werror]
   return c;
          ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
88e52a1
Sat Mar 12 04:09:04 UTC 2022: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|6
total_score: 10/70
8705404
Sat Mar 12 04:10:09 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
9e9cdd1
Sat Mar 12 04:10:18 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9a3f71d
